fixed: changed profile fields spacing to better reflect the row positioning

--- a/static/css/profile.scss
+++ b/static/css/profile.scss
@@ -78,7 +78,7 @@ main {
                     }
 
                     &.last-name, &.last-login, &.played {
-                        margin-bottom: 20px;
+                        margin-bottom: 27px;
                     }
                     
                     label {
